--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.swingk.utils.table</groupId>
   <artifactId>table-stream-utils</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>table-stream-utils</name>
   <url>https://github.com/parubok/table-stream-utils</url>
@@ -21,7 +20,7 @@
     <connection>scm:git:git@github.com:parubok/table-stream-utils</connection>
     <url>scm:git:git@github.com:parubok/table-stream-utils</url>
     <developerConnection>scm:git:git@github.com:parubok/table-stream-utils</developerConnection>
-    <tag>HEAD</tag>
+    <tag>table-stream-utils-1.0</tag>
   </scm>
 
   <dependencies>
@@ -73,6 +72,15 @@
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>3.0.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <useReleaseProfile>false</useReleaseProfile>
+          <tagNameFormat>v@{version}</tagNameFormat>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
