[maven-release-plugin] prepare release v1.7

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.swingk.utils.stream</groupId>
   <artifactId>swing-stream-utils</artifactId>
-  <version>1.7-SNAPSHOT</version>
+  <version>1.7</version>
 
   <name>swing-stream-utils</name>
   <url>https://github.com/parubok/swing-stream-utils</url>
@@ -20,7 +20,7 @@
     <connection>scm:git:git@github.com:parubok/swing-stream-utils</connection>
     <url>scm:git:git@github.com:parubok/swing-stream-utils</url>
     <developerConnection>scm:git:git@github.com:parubok/swing-stream-utils</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v1.7</tag>
   </scm>
 
   <dependencies>
