--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.github.parubok</groupId>
   <artifactId>swing-stream-utils</artifactId>
-  <version>1.30-SNAPSHOT</version>
+  <version>1.30</version>
 
   <name>swing-stream-utils</name>
   <url>https://github.com/parubok/swing-stream-utils</url>
@@ -40,7 +40,7 @@
     <connection>scm:git:git@github.com:parubok/swing-stream-utils</connection>
     <url>scm:git:git@github.com:parubok/swing-stream-utils</url>
     <developerConnection>scm:git:git@github.com:parubok/swing-stream-utils</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v1.30</tag>
   </scm>
 
   <dependencies>
