--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.github.parubok</groupId>
   <artifactId>swing-stream-utils</artifactId>
-  <version>1.32</version>
+  <version>1.33-SNAPSHOT</version>
 
   <name>swing-stream-utils</name>
   <description>Utils for working with Java Swing components via Java 8 streams</description>
@@ -49,7 +49,7 @@
     <connection>scm:git:git@github.com:parubok/swing-stream-utils</connection>
     <url>scm:git:git@github.com:parubok/swing-stream-utils</url>
     <developerConnection>scm:git:git@github.com:parubok/swing-stream-utils</developerConnection>
-    <tag>v1.32</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
